#
# Makefile.am for dhcpv6 include subdirectory
# Author: David Cantrell <dcantrell@redhat.com>
#

includedir = $(includedir)/dhcp6client

noinst_HEADERS = dhcp6r.h relay6_database.h relay6_parser.h relay6_socket.h \
                 server6_conf.h

include_HEADERS = dhcp6client.h common.h cfg.h dhc6_alloc.h dhcp6.h \
                  hash.h lease.h timer.h

MAINTAINERCLEANFILES = Makefile.in
