# Makefile.am for dhcpv6 include subdirectory
# Author: David Cantrell <dcantrell@redhat.com>

noinst_HEADERS = client6_addr.h common.h confdata.h constants.h dad_parse.h \
                 dhcp6c.h dhcp6r.h dhcp6s.h duid.h gfunc.h lease.h log.h \
                 relay6_database.h relay6_parser.h relay6_socket.h \
                 server6_addr.h server6_conf.h str.h timer.h types.h

MAINTAINERCLEANFILES = Makefile.in
